# android-mcp-sdk

./: .gitignore  404.html  ADB_DOCUMENTATION_SUMMARY.md  ADB_TESTING_IMPLEMENTATION_SUMMARY.md  BUILTIN_TOOLS_VALIDATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  STDIO_TRANSPORT_INVESTIGATION_SUMMARY.md  TOOL_EXTRACTION_SUMMARY.md  build.gradle.kts  firebender.json  gradle.properties  index.html  mkdocs.yml  settings.gradle.kts  sitemap.xml
COMPLETE_MCP_SERVER_WRAPPER/: index.html
api-reference/: index.html
ci/: Dockerfile
core/: build.gradle.kts
debug-bridge/: build.gradle.kts
docs/: COMPLETE_MCP_SERVER_WRAPPER.md  STDIO_REMOVAL_SUMMARY.md  STDIO_TRANSPORT_ANALYSIS.md  STDIO_Transport_Investigation.md  STDIO_initial_results.md  adb-port-forwarding.md  api-reference.md  getting-started.md  index.md  transport.md  usage.md
getting-started/: index.html
gradle/: libs.versions.toml
lib/: build.gradle.kts
roadmap/: 01-resource-subscription-logic.md  02-sampling-requests-implementation.md  03-jsonrpc-message-parsing.md  04-websocket-transport-implementation.md  05-http-sse-transport-implementation.md  06-transport-integration-testing.md  07-filesystem-resources-permissions.md  08-database-resources-implementation.md  09-integration-testing-suite.md  10-adb-port-forwarding-testing.md  11-mcp-client-communication-testing.md  12-builtin-tools-validation.md  13-sample-app-enhancement.md  14-integration-guides-documentation.md  15-readme-claimed-features-verification.md  (+10 more)
scripts/docs/: README.md  deploy.sh  pyproject.toml  requirements.txt
(+186 files in other folders)
